trying to fix horizontal scroll

--- a/styles/partials/_mediaQ.scss
+++ b/styles/partials/_mediaQ.scss
@@ -350,6 +350,7 @@
     footer .wrapper .footerMainContainer .footerImgContainer .colorStrip {
         top: 40%;
         height: 100px;
+        display: none;
     }
 
     footer .wrapper .footerMainContainer .formContainer {
