--- a/styles/partials/_reuseableCode.scss
+++ b/styles/partials/_reuseableCode.scss
@@ -10,6 +10,11 @@ html {
     width: 100%;
 }
 
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 body, h1, h2, h3, ul, p {
     margin: 0;
     padding: 0;
